RESOLVED FIXED138473
Don't send identifierForInitialRequest callback method for request with DoNotSendCallbacks option.
https://bugs.webkit.org/show_bug.cgi?id=138473
Summary Don't send identifierForInitialRequest callback method for request with DoNot...
Yongjun Zhang
Reported 2014-11-06 13:21:51 PST
In iOS, identifierForInitialRequest callback method is always called for any request, even the request has opted out with DoNotSendCallbacks.
Attachments
Remove iOS specific lines in ResourceLoader.cpp since they are not needed any more. (3.97 KB, text/plain)
2014-11-06 13:44 PST, Yongjun Zhang
no flags
Fix style issue. (4.01 KB, patch)
2014-11-06 13:51 PST, Yongjun Zhang
no flags
Yongjun Zhang
Comment 1 2014-11-06 13:23:00 PST
Yongjun Zhang
Comment 2 2014-11-06 13:44:55 PST
Created attachment 241129 [details] Remove iOS specific lines in ResourceLoader.cpp since they are not needed any more.
WebKit Commit Bot
Comment 3 2014-11-06 13:46:31 PST
Attachment 241129 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:3: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:4: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:7: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:15: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:16: Line contains tab character. [whitespace/tab] [5] Total errors found: 8 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Pratik Solanki
Comment 4 2014-11-06 13:48:08 PST
Comment on attachment 241129 [details] Remove iOS specific lines in ResourceLoader.cpp since they are not needed any more. View in context: https://bugs.webkit.org/attachment.cgi?id=241129&action=review > Source/WebCore/ChangeLog:4 > + https://bugs.webkit.org/show_bug.cgi?id=138473 Add the radar number here. > Source/WebCore/loader/ResourceLoader.cpp:273 > + Do we still need this?
Yongjun Zhang
Comment 5 2014-11-06 13:51:09 PST
Created attachment 241130 [details] Fix style issue.
Yongjun Zhang
Comment 6 2014-11-06 13:56:11 PST
(In reply to comment #4) > Comment on attachment 241129 [details] > Remove iOS specific lines in ResourceLoader.cpp since they are not needed > any more. > > View in context: > https://bugs.webkit.org/attachment.cgi?id=241129&action=review > > > Source/WebCore/ChangeLog:4 > > + https://bugs.webkit.org/show_bug.cgi?id=138473 > > Add the radar number here. > > > Source/WebCore/loader/ResourceLoader.cpp:273 > > + > > Do we still need this? I think so. There is still WebKit1 clients using identifierForInitialRequest callback and they could stop the resource loading in the callback.
WebKit Commit Bot
Comment 7 2014-11-06 14:51:28 PST
Comment on attachment 241130 [details] Fix style issue. Clearing flags on attachment: 241130 Committed r175718: <http://trac.webkit.org/changeset/175718>
WebKit Commit Bot
Comment 8 2014-11-06 14:51:32 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.