Don't send identifierForInitialRequest callback method for request with DoNotSendCallbacks option. https://bugs.webkit.org/show_bug.cgi?id=138473

The iOS specific code that sets up a valid m_identifier is not needed any more, since this
will be done later in ResourceLoader::willSendRequest. This also matches the behavior that
we don't call assignIdentifierToInitialRequest callback method if the reqeust has
DoNotSendCallbacks option.

Patch by Yongjun Zhang <yongjun_zhang@apple.com> on 2014-11-06
Reviewed by Pratik Solanki.

* loader/ResourceLoader.cpp:
(WebCore::ResourceLoader::willSendRequest): Remove iOS specific block for setting up a valid
    m_identifier. In iOS, also make sure we still bail out if the resource loader was stopped
    in assignIdentifierToInitialRequest callback by a client.

Canonical link: https://commits.webkit.org/156309@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175718 268f45cc-cd09-0410-ab3c-d52691b4dbfc